kubernetes/apps/airflow/airflow/app/tailscale-ingress.yaml
# kubernetes/apps/airflow/airflow/app/tailscale-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-tailscale-ingress
  namespace: airflow
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-webserver
                port:
                  number: 8080
  tls:
    - hosts:
        - airflow
